# patcher

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: apply.rs  binary_diff.rs  binary_patch.rs  create.rs  main.rs  patch_format.rs  rolling_hash.rs  util.rs
tests/: integration_test.rs
